...
	
	var hideCloseButtonWhilePinned: Bool {
		return false
	}
	
	var closeButtonTitle: String {
		return "Close"
	}
	var popButtonTitle: String {
		return "⬇︎"
	}

	var modalCloseButtonTitle: String {
		return "Back"
	}

...
