...
                            <constraint firstItem="Ldo-aI-aqI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="63u-aQ-F6f"/>
                            <constraint firstAttribute="trailing" secondItem="Ldo-aI-aqI" secondAttribute="trailing" id="IRi-qI-unN"/>
                            <constraint firstItem="Ldo-aI-aqI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Juc-Py-m3p"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ldo-aI-aqI" secondAttribute="bottom" id="XLS-l3-cUy"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="PanelKit Example" id="0j5-HW-w4S">
                        <rightBarButtonItems>
                            <barButtonItem title="TextView2" id="Oga-o6-uCI">
                                <connections>
                                    <action selector="showTextView2Panel:" destination="BYZ-38-t0r" id="zsS-HO-MAv"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="TextView" id="maQ-Jd-bzD">
                                <connections>
                                    <action selector="showTextViewPanel:" destination="BYZ-38-t0r" id="CHo-I6-Xb5"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Map" id="fSk-xH-LRf">
                                <connections>
                                    <action selector="showMap:" destination="BYZ-38-t0r" id="hJt-Ze-whQ"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
